fix #13, #15 & 收藏功能起步
1. 支持点击textview跳转网页
2. 考虑收藏存储功能
3. 增加推送时间的设置，需重启后有效
4. search下的结果url的绑定

--- a/Client/Logistics/res/layout/activity_profile_current_deal_detail.xml
+++ b/Client/Logistics/res/layout/activity_profile_current_deal_detail.xml
@@ -116,13 +116,15 @@
             	    android:id="@+id/source_detail_info"
             	    android:layout_width="fill_parent"
             	    android:layout_height="110dp"
-            	    android:textSize="20sp" />
+            	    android:textSize="20sp"
+            	    android:clickable="true"
+            	    android:onClick="onClick" />
 				
             	<Button
             	android:id="@+id/notify_source"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/notify_source"
+                android:text="@string/favorite"
                 android:textSize="20sp"
                 android:layout_gravity="center_horizontal" />
         </LinearLayout>
