--- a/Client/Logistics/res/layout/activity_good_result_detail.xml
+++ b/Client/Logistics/res/layout/activity_good_result_detail.xml
@@ -122,7 +122,7 @@
             	android:id="@+id/submit_order"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/submit_order"
+                android:text="@string/favorite"
                 android:textSize="20sp"
                 android:layout_gravity="center_horizontal" />
             
