fix #13 & 收藏功能起步
1.支持点击textview跳转网页
2.考虑收藏存储功能

--- a/Client/Logistics/res/layout/activity_profile.xml
+++ b/Client/Logistics/res/layout/activity_profile.xml
@@ -142,6 +142,13 @@
                             android:layout_height="wrap_content"
                             android:text="@string/change_password"
                             android:textSize="20sp" />
+            	
+            	<Button
+            	    		android:id="@+id/favorite"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/favorite"
+                            android:textSize="20sp" />
       <!--       	<Button
             	    		android:id="@+id/change_phone"
                             android:layout_width="wrap_content"
