--- a/Client/Logistics/res/layout/activity_profile_current_deal_detail.xml
+++ b/Client/Logistics/res/layout/activity_profile_current_deal_detail.xml
@@ -116,7 +116,9 @@
             	    android:id="@+id/source_detail_info"
             	    android:layout_width="fill_parent"
             	    android:layout_height="110dp"
-            	    android:textSize="20sp" />
+            	    android:textSize="20sp"
+            	    android:clickable="true"
+            	    android:onClick="onClick" />
 				
             	<Button
             	android:id="@+id/notify_source"
