--- a/Client/Logistics/res/layout/activity_profile.xml
+++ b/Client/Logistics/res/layout/activity_profile.xml
@@ -149,6 +149,25 @@
                             android:layout_height="wrap_content"
                             android:text="@string/favorite"
                             android:textSize="20sp" />
+            	<TableRow android:layout_width="match_parent"
+            	   		  android:layout_height="wrap_content" >
+
+            		<TextView
+            		    android:layout_width="wrap_content"
+            		    android:layout_height="wrap_content"
+            		    android:text="@string/refreshtime"
+            		    android:layout_gravity="center_vertical"
+            		    android:textSize="20sp" />
+
+                        <Spinner 
+            	    		android:id="@+id/refreshtime"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+            	    />
+                </TableRow>
+            	
+            	
+            	
       <!--       	<Button
             	    		android:id="@+id/change_phone"
                             android:layout_width="wrap_content"
