resolve #16 and 更新页面显示
1. 实现收藏夹功能，收藏夹按照在手机端添加的先后顺序排列
2. 更新listview，双栏显示
3. 实现时间显示

--- a/Client/Logistics/res/layout/activity_profile.xml
+++ b/Client/Logistics/res/layout/activity_profile.xml
@@ -147,7 +147,7 @@
             	    		android:id="@+id/favorite"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/favorite"
+                            android:text="@string/myfavorite"
                             android:textSize="20sp" />
             	<TableRow android:layout_width="match_parent"
             	   		  android:layout_height="wrap_content" >
