--- a/Client/LogisticsPlatform/res/layout/activity_profile.xml
+++ b/Client/LogisticsPlatform/res/layout/activity_profile.xml
@@ -164,6 +164,12 @@
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
             	    />
+                        <Button
+            	    		android:id="@+id/submit"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/submit"
+                            android:textSize="20sp" />
                 </TableRow>
             	
             	
