--- a/Client/LogisticsPlatform/res/layout/activity_good_result_detail.xml
+++ b/Client/LogisticsPlatform/res/layout/activity_good_result_detail.xml
@@ -103,7 +103,7 @@
             <TextView
 				android:id="@+id/goods_detail_info"
 				android:layout_width="fill_parent"
-				android:layout_height="110dp"
+				android:layout_height="wrap_content"
 				android:textSize="20sp"/> 
 				
             <TextView
@@ -115,7 +115,7 @@
             <TextView
 				android:id="@+id/source_detail_info"
 				android:layout_width="fill_parent"
-				android:layout_height="110dp"
+				android:layout_height="wrap_content"
 				android:textSize="20sp"/> 
 				
             <Button
