--- a/Client/LogisticsPlatform/res/layout/activity_main.xml
+++ b/Client/LogisticsPlatform/res/layout/activity_main.xml
@@ -38,8 +38,9 @@
           android:id="@android:id/tabs"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
-          android:tabStripEnabled="true"
+          android:tabStripEnabled="false"
           android:background="@drawable/ic_tabs_bg" />
+        
     </LinearLayout>
 
 </TabHost>
