--- a/Client/LogisticsPlatform/res/layout/activity_rss.xml
+++ b/Client/LogisticsPlatform/res/layout/activity_rss.xml
@@ -86,17 +86,11 @@
                 </TableLayout>
                          
                
-                 <GridView
-                     android:id="@+id/gridview"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:layout_marginTop="25dp"
-                     android:columnWidth="90dp"
-                     android:gravity="center"
-                     android:horizontalSpacing="10dp"
-                     android:numColumns="auto_fit"
-                     android:stretchMode="columnWidth"
-                     android:verticalSpacing="10dp" />
+                 <ListView
+                     android:id="@+id/list_rsscities"
+                     android:layout_width="fill_parent"
+                     android:layout_height="fill_parent"
+                      />
 
             </LinearLayout>
         
