--- a/Client/LogisticsPlatform/res/layout/activity_login_detail.xml
+++ b/Client/LogisticsPlatform/res/layout/activity_login_detail.xml
@@ -88,6 +88,7 @@
          android:id="@+id/rememberpassword"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
+         android:layout_below="@id/profile_top"
          android:layout_marginLeft="15dp"
          android:layout_centerVertical="true"
          android:checked="false"
