--- a/Client/LogisticsPlatform_stable/app/src/main/res/layout/activity_profile_change_password.xml
+++ b/Client/LogisticsPlatform_stable/app/src/main/res/layout/activity_profile_change_password.xml
@@ -21,34 +21,28 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="#eeeeee"
     android:gravity="center_horizontal"
-    android:background="@drawable/add_alarm_bg"
+
     >
 
-    <ImageView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/map_clock"
-        android:layout_marginBottom="@dimen/world_bottom_padding"
-        android:layout_alignParentBottom="true"
-        />
 
     <RelativeLayout
         android:id="@+id/title_layout"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/title_tool_bar_title"
+        android:layout_height="52dip"
+        android:background="@drawable/ic_tabs_bg"
         >
          <Button
-            android:id="@+id/return_btn"
-            android:layout_width="50dip"
-            android:layout_height="30dip"
-            android:text="@string/returns"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="5dip"
-            android:background="@drawable/ic_button_1"
-            style="@style/button_style"
+             android:id="@+id/return_btn"
+             android:layout_width="50dip"
+             android:layout_height="25dip"
+             android:layout_centerVertical="true"
+             android:textColor="#ffffff"
+             android:text="@string/button_return"
+             android:layout_alignParentLeft="true"
+             android:layout_marginLeft="5dip"
+             android:background="@drawable/ic_button_return"
             />
 
             <!-- <Button
@@ -65,19 +59,11 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="18dip"
                  android:text="@string/change_password"
                 style="@style/titleTextStyle"
                 />
-        <Button
-            android:id="@+id/add_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:textColor="@android:color/white"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="5dip"
-            android:background="@drawable/ic_button_add"
-            />
+
     </RelativeLayout>
 
     <ScrollView
@@ -95,65 +81,79 @@
                     android:id="@+id/profile_top"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginTop="10dp" >
-            	<TableRow android:layout_width="match_parent" >
+                    android:layout_marginLeft="15dip"
+                    android:layout_marginRight="15dip"
+                    android:layout_marginTop="24dip" >
+            	<TableRow android:layout_width="match_parent"
+                    android:background="@drawable/ic_round_bg">
 
                         <TextView
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="45dip"
+                            android:paddingLeft="10dip"
                             android:text="@string/old_password"
                             android:textSize="20sp" />
 
                         <EditText
                             android:id="@+id/old_password"
                             android:layout_width="150dp"
-                            android:layout_height="wrap_content"
+                            android:layout_height="45dip"
                             android:ems="10"
+                            android:background="@null"
                             android:inputType="textWebPassword" />
 
                 </TableRow>
                 
-            	<TableRow android:layout_width="match_parent" >
+            	<TableRow android:layout_width="match_parent"
+                    android:layout_marginTop="2dp"
+                    android:background="@drawable/ic_round_bg">
 
                         <TextView
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="45dip"
+                            android:paddingLeft="10dip"
                             android:text="@string/new_password"
                             android:textSize="20sp" />
 
                         <EditText
                             android:id="@+id/new_password"
                             android:layout_width="150dp"
-                            android:layout_height="wrap_content"
+                            android:layout_height="45dip"
                             android:ems="10"
+                            android:background="@null"
                             android:inputType="textWebPassword"/>
                 </TableRow>
                 
-            	<TableRow android:layout_width="match_parent" >
+            	<TableRow android:layout_width="match_parent"
+                    android:layout_marginTop="2dp"
+                    android:background="@drawable/ic_round_bg">
 
                         <TextView
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="45dip"
+                            android:paddingLeft="10dip"
                             android:text="@string/confirm"
                             android:textSize="20sp" />
 
                         <EditText
                             android:id="@+id/confirm"
                             android:layout_width="150dp"
-                            android:layout_height="wrap_content"
+                            android:layout_height="45dip"
                             android:ems="10"
+                            android:background="@null"
                             android:inputType="textWebPassword" />
                 </TableRow>
             	
             	            	
             	<Button
             	    		android:id="@+id/submit"
+                    android:layout_marginTop="24dp"
                             android:layout_width="wrap_content"
-                            android:text="@string/submit"
-                            android:layout_height="0dip"
+                            android:text="@string/confirm1"
+                            android:layout_height="45dip"
                     		android:layout_gravity="center_horizontal"
+                    android:background="#ff9700"
+                    android:textColor="#ffffff"
                     		android:layout_weight="1"
                             android:textSize="20sp" />
             	
@@ -164,10 +164,5 @@
         </LinearLayout>
     </ScrollView>
 
-        <ImageView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:background="@drawable/bg_shadow_clock"
-            />
+
 </RelativeLayout>
