--- a/Client/LogisticsPlatform_stable/app/src/main/res/layout/activity_rss.xml
+++ b/Client/LogisticsPlatform_stable/app/src/main/res/layout/activity_rss.xml
@@ -109,7 +109,16 @@
                android:layout_marginTop="400dip"
                android:layout_marginLeft="100dip"
                android:visibility="invisible"
-               android:textSize="20sp"/> 
-   
-        
+               android:textSize="20sp"/>
+
+    <Button android:id="@+id/cancel_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="48dip"
+        android:text="@string/cancel"
+        android:layout_marginTop="300dip"
+        android:layout_marginLeft="100dip"
+        android:visibility="invisible"
+        android:textSize="20sp"/>
+
+
 </RelativeLayout>
