--- a/Client/LogisticsPlatform_stable/app/src/main/res/values/roboguice.xml
+++ b/Client/LogisticsPlatform_stable/app/src/main/res/values/roboguice.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="MissingTranslation">
     <!-- 绑定要注入的接口是谁实现的 -->
     <string-array name="roboguice_modules">
         <item>com.logistics.module.LogisticsModule</item>
